# WoW

./: .clang-format  CMakeLists.txt  README.md
example/: CMakeLists.txt  bench_utils.hh  build_wow.cc  build_wow_bench.sh  build_wow_common.sh  example_arbitrary.py  example_sequential.py  gen_ground_truth.cc  search_wow.cc  search_wow_bench.sh  search_wow_common.sh  search_wow_generic.cc  search_wow_generic.sh
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py  wow_bindings.cc
python/pywowlib/: __init__.py
wow/: disk.hh  index.hh  memory.hh  order_table.hh  space_dist.hh  space_ip.hh  space_l2.hh  utils.hh  visit_list.hh
